Added more blocked type to scaled application and error message

--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -14,8 +14,14 @@
 
 %h1.invisible Add a New Cartidge
 = cartridge_wizard_steps_create 0
-%p
-  Choose a cartridge to add to your application.
+- if @framework.id == 'haproxy-1.4'
+  .alert 
+    Cartridges are currently unable to be embedded in a scaled application. 
+    We will be adding support shortly!
+    In the mean time, some are available as standalone applications.
+-else
+  %p
+    Choose a cartridge to add to your application.
 
 .row
   - unless @cart_types.empty?
