--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -177,7 +177,7 @@
         %p
           All you need is an ssh keypair and a unique name.
         
-        = link_to 'Create your domain now', control_panel_path, :class => 'button'
+        = link_to 'Create your domain now', '/app/console', :class => 'button'
       
           
     %li#create_application
