Feedback from Dan J about message

--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -5,10 +5,10 @@
         Develop and Scale 
         %strong#technology-rotate Apps
         in the Cloud
-      %h2.secondary OpenShift is Red Hat's free, auto-scaling Platform as a Service 
-      (PaaS) for applications.  Run your application in the cloud on OpenShift and 
-      take the hassle out of application development. You focus on coding your 
-      application, and we'll focus on running, managing, and scaling it in the cloud.
+      %h2.secondary 
+        OpenShift is Red Hat's free, auto-scaling Platform as a Service (PaaS) for 
+        applications.  As an application platform in the cloud, OpenShift manages 
+        the stack so you can focus on your code.
 
 - content_for :javascripts do
   = javascript_include_tag "/app/javascripts/twitter.branding.js"
