Capitalization of node.js

--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -62,7 +62,7 @@
       :markdown
         ## Code anything.
 
-        OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.JS, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
+        OpenShift takes a No-Lock-In approach to PaaS by providing built-in support for Node.js, Ruby, Python, PHP, Perl, and Java (the standard in today's Enterprise).  In addition, OpenShift is extensible with a customizable cartridge functionality that allows enterprising developers to add any other language they wish.  We've seen everything from Clojure to Cobol running on OpenShift.  
         
         In addition to this flexible, no-lock-in, language approach, OpenShift supports all the popular frameworks that make a developer's life easier including everything from Spring, to Rails, to Play.  OpenShift is designed to allow Developers to work the way they want to work by giving them the languages, frameworks and tools they need for fast and easy application development.
         <!--![OpenShift Ecosystem Logos](/app/images/overview-ecosystem.png)-->
