--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -2,9 +2,10 @@
 - content_for :ribbon, 'Sign in to OpenShift'
 
 #login-form
-  = form_tag(login_path, :class => 'form-horizontal') do
+  = semantic_form_for @user, :url => login_path, :html => {:class => 'form-horizontal'} do |f|
     - if @redirectUrl.present?
       %input{:type => "hidden", :name => "redirectUrl", :value => @redirectUrl }
+    = f.semantic_errors
     %fieldset
       .control-group
         %label.control-label{:for => 'login_input'}
