fix header backgrounds, ie8 and chrome logo issues

--- a/site/app/stylesheets/_navbar.scss
+++ b/site/app/stylesheets/_navbar.scss
@@ -1,23 +1,1 @@
-/* Common navbar branding */
-/* FIXME: Move common branding in _custom.scss here */
-.navbar {
-  .brand {
-    text-transform: uppercase;
-  }
-
-  .brand > a {
-    display: block;
-  }
-
-  .brand-image {
-    content: ' ';
-    /*background-image: url('../images/logo-medium.png') center top no-repeat;
-    height: logoHeight;
-    width: logoWidth;*/
-  }
-
-  .brand-text {
-    color: white;
-    text-align: center;
-  }
-}
+/* no longer used, see site/_navbar */
