nav additions coming over from original _navbar

--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -21,6 +21,12 @@
     width: $logoWidth;
     margin-bottom: 13px;
   }
+  
+  .brand > a {
+    display: block;
+    color: #fff;
+    text-decoration:none;
+  }
 
   .brand > a > .brand-image {
     -moz-transition: all 0.2s;
