--- a/site/app/views/user/reset_password.html.haml
+++ b/site/app/views/user/reset_password.html.haml
@@ -1,12 +1,9 @@
-%section.main
-  %header
-    %h1
-      - case @responseText[:status]
-        - when 'success'
-          Congratulations! 
-        - when 'error'
-          Oops...
-    
-  .content
-    %p
-      = @responseText[:message]
+%h1.ribbon
+  - case @responseText[:status]
+    - when 'success'
+      Congratulations! 
+    - when 'error'
+      Oops...
+
+%section
+  %p= @responseText[:message]
