--- a/site/app/views/user/reset_password.html.haml
+++ b/site/app/views/user/reset_password.html.haml
@@ -7,3 +7,6 @@
 
 %section
   %p= @responseText[:message]
+
+  %p= link_to '« Back to the main page', root_path
+  -# uncomment when moved %p= link_to '« Back to the request password form', new_password_path :email => 
