--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -6,21 +6,13 @@
     - if @redirectUrl.present?
       %input{:type => "hidden", :name => "redirectUrl", :value => @redirectUrl }
     = f.semantic_errors
-    %fieldset
-      .control-group
-        %label.control-label{:for => 'login_input'}
-          Login
-        .controls
-          %input{:required => true, :placeholder => 'Your redhat.com or RHN account', :value => session[:confirm_login] ? session[:confirm_login] : '', :name => "login",  :id => "login_input"}
-      .control-group
-        %label.control-label{:for => 'pwd_input'}
-          Password
-        .controls
-          %input(id="pwd_input" type="password" name="password" autocomplete="off" required="true")
-      .control-group
-        .controls
-          %a{:href => '/app/user/request_password_reset_form'} Forgot your password?
-      .form-actions
-        %input(type="submit" value="Sign in" class="btn")
-        or
-        %a{:href => defined?(@register_url) ? @register_url : '/app/account/new'} create an account
+    = f.input :rhlogin,
+              :label => 'Login',
+              :input_html => {:placeholder => 'Your redhat.com or RHN account'}
+    = f.input :password,
+              :as => :password,
+              :hint => link_to ("Forgot your password?", new_password_path)
+    = f.buttons do
+      = f.commit_button "Sign in", :button_html =>  {:class => 'btn'}
+      or 
+      = link_to 'create an account', @register_url || new_account_path
