--- a/site/app/views/password/success.html.haml
+++ b/site/app/views/password/success.html.haml
@@ -1,9 +1,12 @@
-- content_for :page_title do
-  OpenShift Email Sent
+- content_for :page_title, 'Password reset email sent'
 
-%section.main
-  .content
-    %h1 Password Reset Email Sent
-    %p An e-mail has been sent to you containing instructions on how to reset your password.  The link in the e-mail will allow you to change your password.
-    %p 
-      = link_to "Return to the main page", root_path
+%h1.ribbon Password reset requested
+
+%section
+  %p
+    An email has been sent to you containing instructions on how to reset your password.
+    The link in the email will allow you to change your password.
+
+  %p If you do not receive an email within a few minutes, check your Spam folder to ensure it was not incorrectly moved. If you don't receive an email, contact us at #{link_to_account_mailto} or on #{link_to_irc}.
+
+  %p= link_to '« Back to the main page', root_path
