--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -8,7 +8,7 @@
     = f.semantic_errors
     = f.input :rhlogin,
               :label => 'Login',
-              :input_html => {:placeholder => 'Your redhat.com or RHN account'}
+              :input_html => {:autofocus => true, :placeholder => 'Your redhat.com or RHN account'}
     = f.input :password,
               :as => :password,
               :hint => link_to ("Forgot your password?", new_password_path)
