--- a/site/app/views/login/show.html.haml
+++ b/site/app/views/login/show.html.haml
@@ -8,10 +8,11 @@
     = f.semantic_errors
     = f.input :rhlogin,
               :label => 'Login',
-              :input_html => {:autofocus => true, :placeholder => 'Your redhat.com or RHN account'}
+              :input_html => {:autofocus => @user.rhlogin.blank?, :placeholder => 'Your redhat.com or RHN account'}
     = f.input :password,
               :as => :password,
-              :hint => link_to ("Forgot your password?", new_password_path)
+              :hint => link_to ("Forgot your password?", new_password_path),
+              :input_html => {:autofocus => @user.rhlogin.present?}
     = f.buttons do
       = f.commit_button "Sign in", :button_html =>  {:class => 'btn'}
       or 
