--- a/site/app/views/user/create.html.haml
+++ b/site/app/views/user/create.html.haml
@@ -1,8 +1,8 @@
-%h1.ribbon
-  .ribbon-content
-    What's Next?
-  .ribbon-left
+%h1.ribbon What's next?
 
-%section.main
-  .content
-    Check your inbox for an email with a validation link. Click on the link to complete the registration process.
+%section
+  %p Check your inbox for an email confirming your account.  You must click the link in the email to complete the registration process.
+
+  %p If you do not receive an email within a few minutes, check your Spam folder to ensure it was not incorrectly moved. If you don't receive your email, contact us at #{link_to_account_mailto} or on #{link_to_irc}.
+
+  %p= link_to '« Back to the main page', root_path
