--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -143,6 +143,20 @@ section#app-cartridges .cartridge-block {
 		float: right;
 		}
 	section#console-mast .row ul.unstyled-flat li.span7.right { text-align: left; } 
+	.form-horizontal .controls {
+		margin-left: 0;
+		}
+	.form-horizontal .control-label {
+    float: none;
+    text-align: left;
+    }
+  .control-group.error p+p {
+  	padding-left: 0 !important;
+  	display:block;
+  	}
+	.control-group-important .input-prepend-append .add-on-first, .control-group-important .input-prepend-append .add-on-last, .control-group-important .input-prepend-append .add-on-middle, .control-group-important .input-prepend-append input, .control-group-important .input-prepend-append input {
+    font-size: inherit;
+   	}
 }
 @media (min-width: 768px) and (max-width: 980px) {
 	#my-apps li h2 {
@@ -161,11 +175,10 @@ section#app-cartridges .cartridge-block {
 
 
 
-.show-grid [class*="span"] {
-	background-color: #c0ddf3;
-	margin-bottom: 1px;
-	}
 
 #app-errors {
-  display: none
+  display: none;
+  margin-bottom: 15px;
 }
+
+.control-group.error p+p {padding-left: 100px;}
