--- a/site/app/views/domains/_form.html.haml
+++ b/site/app/views/domains/_form.html.haml
@@ -9,7 +9,7 @@
           %span.add-on-last> .rhcloud.com
         = f.inline_errors_for :namespace
         .row
-          #app-errors.span4.offset2
+          #app-errors.span
         .help-block Your namespace must be letters or numbers with no spaces or symbols.
     = f.buttons do
       = link_to "Cancel", account_path, :class => 'btn'
