--- a/site/app/views/domains/_form.html.haml
+++ b/site/app/views/domains/_form.html.haml
@@ -8,7 +8,7 @@
           = f.text_field :name, :autofocus => true, :placeholder => 'Namespace', :class => 'domain_name'
           %span.add-on-last> .rhcloud.com
           = f.inline_errors_for :namespace
-        .row
+        .row.control-group.error
           #app-errors.span
         .help-block Your namespace must be letters or numbers with no spaces or symbols.
     = f.buttons do
