--- a/site/app/views/product/express.html.haml
+++ b/site/app/views/product/express.html.haml
@@ -9,9 +9,9 @@
       .secondary Express is a free, cloud-based application platform for Java, Perl, PHP, Python, and Ruby applications. 
 
   - if logged_in?
-    = take_action console_path, 'Open the <strong>OpenShift Express</strong> Console'
+    = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
   - else
-    = take_action '/app/user/new/express', 'Sign up to try <strong>OpenShift Express</strong>'
+    = take_action '/app/user/new/express', 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon What is Express?
   
