Added Node.js on several marketing pages

--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -6,7 +6,7 @@
         Our
         %strong#technology-rotate shared
         cloud solution
-      .secondary Express is a free, cloud-based application platform for Java, Perl, PHP, Python, and Ruby applications. 
+      .secondary Express is a free, cloud-based application platform for Java, Ruby, Node.js, Python, PHP and Perl applications. 
 
   - if logged_in?
     = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
