--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -20,8 +20,8 @@
 
   %h2
     OpenShift will give you a fast on-ramp to the Cloud. 
-    Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>PHP</strong>, <strong>JavaScript</strong>, <strong>Perl</strong> and 
-    <strong>Python</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
+    Get <strong>Java</strong>, <strong>Ruby</strong>, <strong>Node.js</strong>, <strong>Python</strong>, <strong>PHP</strong> and 
+    <strong>Perl</strong> apps in the cloud with the command-line and <strong>Git</strong> in just a few minutes. 
     
   :markdown
     OpenShift is Red Hat's Cloud Computing Platform as a Service (PaaS) offering.  OpenShift is an application platform in the cloud where application developers and teams can build, test, deploy, and run their applications.  OpenShift takes care of all the infrastructure, middleware, and management and allows the developer to focus on what they do best: designing and coding applications. 
