--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -317,6 +317,15 @@ body.signup {
   font-weight: bold;
   letter-spacing: 1px;
 }
+
+#instructions li.topic {
+  margin-bottom: 20px;
+}
+
+#instructions li.install {
+  margin-top: 15px;
+}
+
 #nav .action-call {
   margin: 0 auto 20px;
 }
