Redirect /user/new to /account/new, replace flex login sequence with generic sequence

--- a/site/app/views/email_confirm/error.html.haml
+++ b/site/app/views/email_confirm/error.html.haml
@@ -7,4 +7,4 @@
     .alert
       = msg
 
-%p #{link_to 'Register again', new_web_user_path} or #{link_to 'return to the main page.', root_path}
+%p #{link_to 'Register again', new_account_path} or #{link_to 'return to the main page.', root_path}
