--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -262,5 +262,5 @@
 - if logged_in?
   %section= take_action console_path, 'Ready to scale in the cloud?', 'Open the OpenShift Console'
 - else
-  %section= take_action new_web_user_path, 'Ready to scale in the cloud?', 'Sign up now'
+  %section= take_action new_account_path, 'Ready to scale in the cloud?', 'Sign up now'
 
