--- a/site/app/views/styleguide/overview.html.haml
+++ b/site/app/views/styleguide/overview.html.haml
@@ -7,7 +7,7 @@
       .secondary
         Start your journey into the cloud with the answers you need.
 
-  = take_action new_web_user_path, 'Sign up to try <strong>OpenShift</strong>'
+  = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon
   What is OpenShift?
@@ -84,4 +84,4 @@
 
     ![OpenShift ease of use](/app/images/overview-ease-of-use.png)
 
-%section= take_action new_web_user_path, 'Ready to scale in the cloud?', 'Sign up now'
+%section= take_action new_account_path, 'Ready to scale in the cloud?', 'Sign up now'
