--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -19,7 +19,7 @@
   #learn.section-striped.lift-counter
     .container.container-inset
       .row
-        = take_action new_web_user_path, 'Get started in the cloud for <strong>free</strong>', 'Try it now', :class => 'span12'
+        = take_action new_account_path, 'Get started in the cloud for <strong>free</strong>', 'Try it now', :class => 'span12'
   
         .span6
           %ul.learn.unstyled
