--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -10,7 +10,7 @@
       .secondary
         Start your journey into the cloud with the answers you need.
 
-  = take_action new_web_user_path, 'Sign up to try <strong>OpenShift</strong>'
+  = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon
   .ribbon-content What is OpenShift?
