--- a/site/app/views/site/signup.html.haml
+++ b/site/app/views/site/signup.html.haml
@@ -5,7 +5,7 @@
 - input_html = { :class => input_class } if defined? input_class
 
 #new-user
-  = semantic_form_for 'web_user', :remote => true, :url => web_user_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
+  = semantic_form_for 'web_user', :remote => true, :url => account_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
     %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? :redirectUrl : '/app/new/signup_success') }
     = form.inputs do
       = form.hidden_field :cloud_access_choice, :value => (@product == CloudAccess::FLEX_NAME ? CloudAccess::FLEX : CloudAccess::EXPRESS)
