--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -55,7 +55,7 @@
 #learn.section-striped.lift-counter
   .container.container-inset
     .row
-      = take_action new_web_user_path, 'Create your <strong>first three apps</strong> for free', 'Try it out', :class => 'span12'
+      = take_action new_account_path, 'Create your <strong>first three apps</strong> for free', 'Try it out', :class => 'span12'
 
       .span6
         %ul.learn.unstyled
