--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -1,7 +1,7 @@
 - content_for :ribbon, 'Sign up for OpenShift'
 
 #new-user
-  = semantic_form_for @user, :url => web_user_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
+  = semantic_form_for @user, :url => account_path, :simple => true, :html => {:class => 'form-horizontal'} do |form|
     %input{:type => "hidden", :name => "redirectUrl", :value => (defined?(@redirectUrl) ? @redirectUrl : '/app/user/complete') }
     = form.hidden_field :cloud_access_choice, :value => (@product == CloudAccess::FLEX_NAME ? CloudAccess::FLEX : CloudAccess::EXPRESS)
     = form.semantic_errors :captcha
