--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -10,7 +10,10 @@
       .secondary
         Start your journey into the cloud with the answers you need.
 
-  = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
+  - if logged_in?
+    = take_action console_path, 'Open the <strong>OpenShift</strong> Console'
+  - else
+    = take_action new_account_path, 'Sign up to try <strong>OpenShift</strong>'
 
 %h1.ribbon
   .ribbon-content What is OpenShift?
