add initial opensource disclaimer page, links and route
 We still need to list the projects we use

--- a/site/app/views/layouts/_footer.html.haml
+++ b/site/app/views/layouts/_footer.html.haml
@@ -46,7 +46,8 @@
             = link_to 'Privacy Policy', legal_openshift_privacy_path
           %li
             = link_to 'Security', 'https://access.redhat.com/security/team/contact/'
-        
+          %li
+            = link_to 'Open Source Disclaimer', legal_opensource_disclaimer_path
       %li
         %header
           %h2
