--- a/site/app/views/layouts/console/_footer.html.haml
+++ b/site/app/views/layouts/console/_footer.html.haml
@@ -25,6 +25,7 @@
           %li= link_to 'Legal', legal_path
           %li= link_to 'Privacy Policy', legal_openshift_privacy_path
           %li= link_to 'Security', 'https://access.redhat.com/security/team/contact/'
+          %li= link_to 'Open Source Disclaimer', legal_opensource_disclaimer_path
 
       .span3.link-column
         %header
