--- a/site/app/views/legal/show.html.haml
+++ b/site/app/views/legal/show.html.haml
@@ -23,3 +23,6 @@
     
     %li
       = link_to 'Terms of Use', legal_site_terms_path
+
+    %li
+      = link_to 'Open Source Disclaimer', legal_opensource_disclaimer_path
