--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -81,7 +81,7 @@
               As an alternative to <code>sudo</code>, you can activate a root terminal with the <code>su</code> command and the root password. In that case, omit <code>sudo</code> from the given commands. Don't forget to close your root terminal when you're done!
             
             %aside 
-              = link_to 'Installing OpenShift client tools video walkthrough', local_video_url('express_client_tools')
+              = link_to 'Installing OpenShift client tools video walkthrough', local_video_url('express_client_tools'), {:target => '_blank'}
               
         
         %li#other_nix.install
@@ -203,7 +203,7 @@
           Your application's domain name will be &lt;your app name&gt;-&lt;your domain name&gt;.rhcloud.com. So, the application created by the example commands would be located at myapp-mydomain.rhcloud.com
       
       %aside
-        = link_to 'Creating an application video walkthrough', local_video_url('express_create_app')
+        = link_to 'Creating an application video walkthrough', local_video_url('express_create_app'), {:target => '_blank'}
       
     %li#publish.topic
       %h4 Make a change, publish
@@ -223,7 +223,7 @@
         Now, check your URL - your change will be live.
       
       %aside
-        = link_to 'Deploying an application video walkthrough', local_video_url('express_deploy')
+        = link_to 'Deploying an application video walkthrough', local_video_url('express_deploy'), {:target => '_blank'}
         
       %aside
         %p
