Compass initial code

--- a/site/app/views/layouts/site/_stylesheets.html.haml
+++ b/site/app/views/layouts/site/_stylesheets.html.haml
@@ -1,6 +1,6 @@
 -# CSS: implied media="all"
-= stylesheet_link_tag '/app/stylesheets/common.css', :media => 'all'
-= stylesheet_link_tag '/app/stylesheets/site.css', :media => 'all'
+= stylesheet_link_tag 'common.css', :media => 'all'
+= stylesheet_link_tag 'site.css', :media => 'all'
 
 -# Append your own using content_for :stylesheets
 = yield :stylesheets
