--- a/site/app/views/layouts/console/_stylesheets.html.haml
+++ b/site/app/views/layouts/console/_stylesheets.html.haml
@@ -1,6 +1,6 @@
 -# CSS: implied media="all"
-= stylesheet_link_tag '/app/stylesheets/bootstrap.css', :media => 'all'
-= stylesheet_link_tag '/app/stylesheets/console.css', :media => 'all'
+= stylesheet_link_tag 'bootstrap.css', :media => 'all'
+= stylesheet_link_tag 'console.css', :media => 'all'
 -# Moved into core scss = stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
 
 -# Append your own using content_for :stylesheets
